Fix alignment on header.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,5 @@
 $grey: #3C3C3C;
+$white: #F5F5F5;
 $main-font: 'Fira Sans Extra Condensed', sans-serif;
 
 * {
@@ -7,27 +8,47 @@ $main-font: 'Fira Sans Extra Condensed', sans-serif;
 }
 
 header {
-  width: 100%;
   background-color: $grey;
-  color: white;
+  color: $white;
+  position: relative;
   img {
     display: block;
     margin: 0 auto;
   }
   .header-links {
-    padding: 0 6em;
+    position: absolute;
+    top: 50%;
+    right: 13%;
+    font-size: 16pt;
     ul {
       display: flex;
       list-style: none;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: space-between;
+      li {
+        margin: 0 100px;
+      }
+    }
+  }
+  .header-account {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    ul {
+      display: inline-flex;
+      list-style: none;
+      margin: 20px 50px 0 0;
+      #signUp {
+        margin-left: 15px;
+        padding: 1px 5px;
+        border-radius: 10%;
+        background-color: $white;
+        color: $grey;
+      }
     }
   }
 }
 
 body {
-  background-color: #F5F5F5;
+  background-color: $white;
   p {
     font-family: helvetica;
     font-size: 18px;
@@ -75,6 +96,7 @@ body {
     cursor: pointer;
   }
 }
+
 .container-text {
   text-align: center;
   margin: 80px 80px;
@@ -100,7 +122,6 @@ body {
     padding: 0 50px;
     width: 15%;
     height: 15%;
-
   }
 }
 
